--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Shaylee1107.github.io/JobSearch" ,
+  "homepage": "http://Shaylee1107.github.io/JobSearch",
   "name": "job-finder",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +11,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
@@ -48,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.0",
     "gh-pages": "^6.1.1"
   }
 }
