--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "homepage": "http://Shaylee1107.github.io/JobSearch",
   "name": "job-finder",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -26,7 +27,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "type": "module"
   },
   "eslintConfig": {
     "extends": [
