--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "homepage": "http://Shaylee1107.github.io/JobSearch",
   "name": "job-finder",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -26,9 +25,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "type": "module"
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
