--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "jest": "^27.5.1"
   }
 }
