--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "msw": "^2.3.5"
   },
   "msw": {
-    "workerDirectory": "./public"
+    "workerDirectory": [
+      "./public",
+      "public"
+    ]
   }
 }
