--- a/package.json
+++ b/package.json
@@ -16,18 +16,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "undici": "^6.19.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -51,14 +47,11 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "gh-pages": "^6.1.1",
     "jest": "^27.5.1",
-    "msw": "^2.3.5"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
+    "msw": "^2.3.5",
+    "vite": "^5.4.2"
   },
   "jest": {
     "moduleNameMapper": {
